syntax = "proto3";

package xyz.block.ftl.publish.v1;

import "xyz/block/ftl/schema/v1/schema.proto";
import "xyz/block/ftl/v1/ftl.proto";

option go_package = "github.com/block/ftl/backend/protos/xyz/block/ftl/publish/v1;publishpb";
option java_multiple_files = true;

message PublishEventRequest {
  schema.v1.Ref topic = 1;
  bytes body = 2;
  string key = 3;
  // Only verb name is included because this verb will be in the same module as topic
  string caller = 4;
}

message PublishEventResponse {}

service PublishService {
  // Ping service for readiness.
  rpc Ping(xyz.block.ftl.v1.PingRequest) returns (xyz.block.ftl.v1.PingResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  // Publish a message to a topic.
  rpc PublishEvent(PublishEventRequest) returns (PublishEventResponse);
}
